# Modern_C_plus_plus

correction/1_Core/: 1_constexpr.cpp  2_auto.cpp  3_decltype.cpp  4_map_decomposition.cpp  5_constructor_default.cpp  6_threeway.cpp  7_if_constexpr.cpp
correction/2_New_STD/: 1_array.cpp  2_string_view.cpp  3_span.cpp  4_any_optional_variant.cpp  5_unordered_map.cpp  6_chrono.cpp  7_func_mem_func.cpp  8_view_range.cpp
correction/3_Move_Semantics/: 1_move_constructeur.cpp
correction/4_RAII/: 1_unique.cpp  2_shared.cpp  3_weak.cpp
correction/5_Generics/: 1_enable_if.cpp  2_concepts_and_requires.cpp  3_variadic_template.cpp  4_visit_variant.cpp
correction/6_Module/: analyse.ixx  main.cpp  portefeuille.ixx  transactions.ixx
correction/7_Threading_Concurrency/: 1_jthread.cpp  2_future.cpp  3_future_promise.cpp  4_mutex.cpp  5_latch.cpp  6_barrier.cpp  7_osyncstream.cpp
demo/: CMakeLists.txt  version.cpp
demo/1_Core/: CMakeLists.txt  attributes.cpp  constexpr_demo.cpp  decltype.cpp  initializateur_list.cpp  nullptr_demo.cpp  range_for.cpp  range_for_map.cpp  sizeof_member.cpp  structured_bindings.cpp  suffixes_litteraux.cpp  suffixes_litteraux_conversion.cpp  types_normalised.cpp  variable_template.cpp
demo/1_Core/static_members/: CMakeLists.txt  MyClass_after.h  MyClass_before.h  main_after.cpp  main_before.cpp
demo/1_Core/three_way/: CMakeLists.txt  three_way_basic.cpp
demo/2_New_STD/: CMakeLists.txt  algo_ensembliste.cpp  bind_placeholders.cpp  chrono.cpp  random.cpp  span.cpp  std_function.cpp  std_mem_fn.cpp  string_format.cpp  string_new.cpp  string_view.cpp  tuples.cpp
demo/2_New_STD/Associative_container/: CMakeLists.txt  map_vs_unordered_map.cpp  unordered_map.cpp  unordered_set.cpp
demo/2_New_STD/Ranges/: CMakeLists.txt  combined.cpp  demo_view.cpp  ranges.cpp
demo/2_New_STD/Types_Gestion/: CMakeLists.txt  any.cpp  std_optional.cpp  variant.cpp
demo/3_Move_Semantics/: CMakeLists.txt  RVO.cpp  constructeurs.cpp  forward.cpp  move_demo.cpp  qualificateur_reference.cpp
demo/4_RAII/: CMakeLists.txt  custom_deleter.cpp  move_unique_ptr.cpp  shared_ptr.cpp  shared_ptr_cycle.cpp  shared_ptr_frow_raw.cpp  unique_ptr.cpp  weak_ptr.cpp
demo/5_Generics/: CMakeLists.txt  concepts.cpp  concepts_and_requires.cpp  concepts_requires.cpp  concepts_variant_visit.cpp  conditional.cpp  crtp.cpp  extended_friends.cpp  ifconstexpr.cpp  mixins.cpp  pattern_matching.cpp  requires.cpp  sfinae.cpp  template_containment.cpp  template_heritance_specialisation.cpp  template_specialisation.cpp  types_custom.cpp  types_is_integral.cpp  variadic_template.cpp
demo/6_Module/: CMakeLists.txt  dummy.cppm
demo/6_Module/Demo1_simple/: CMakeLists.txt
demo/6_Module/Demo2_separation/: CMakeLists.txt  main.cpp  math.cppm  math.ixx
demo/6_Module/Demo3_private/: CMakeLists.txt  main.cpp  math.cppm
demo/6_Module/Demo4_partitions/: CMakeLists.txt  advanced_operations.ixx  basic_operations.ixx  main.cpp  math.ixx  math__basic_operations.ixx
demo/6_Module/Demo5_submodules/: CMakeLists.txt  basic_operations.ixx  math.ixx
demo/6_Module/Demo6_subfolder/: CMakeLists.txt  main.cpp
demo/6_Module/Demo6_subfolder/operations/: advanced_operations.ixx
demo/7_Threading_Concurrency/: CMakeLists.txt  atomic.cpp  barrier.cpp  call_once.cpp  call_once_singleton.cpp  deferred.cpp  jthread_join.cpp  jthread_token.cpp  latch.cpp  launch.cpp  main.cpp  osyncstream.cpp  promise.cpp  sleep_until.cpp  thread_demo.cpp  with_guard.cpp  with_mutex.cpp  with_recursivemutex.cpp  with_sharedmutex.cpp  with_timedmutex.cpp  with_uniquelock.cpp  without_mutex.cpp  yield.cpp
exercice/: CMakeLists.txt
exercice/1_Core/: 1_constexpr.cpp  2_auto.cpp  3_decltype.cpp  4_map_decomposition.cpp  5_constructor_default.cpp  6_threeway.cpp  7_if_constexpr.cpp  CMakeLists.txt
exercice/2_New_STD/: 1_array.cpp  2_string_view.cpp  3_span.cpp  4_any_optional_variant.cpp  5_unordered_map.cpp  6_chrono.cpp  7_func_mem_func.cpp  8_view_range.cpp  CMakeLists.txt
exercice/3_Move_Semantics/: 1_move_constructeur.cpp  CMakeLists.txt
exercice/4_RAII/: 1_unique.cpp  2_shared.cpp  3_weak.cpp  CMakeLists.txt
exercice/5_Generics/: 1_enable_if.cpp  2_concepts_and_requires.cpp  3_variadic_template.cpp  4_visit_variant.cpp  CMakeLists.txt
exercice/6_Module/: CMakeLists.txt  analyse.ixx  main.cpp  portefeuille.ixx  transactions.ixx
exercice/7_Threading_Concurrency/: 1_jthread.cpp  2_future.cpp  3_future_promise.cpp  4_mutex.cpp  5_latch.cpp  6_barrier.cpp  7_osyncstream.cpp  CMakeLists.txt
