add_executable(nullptr nullptr_demo.cpp)

add_executable(constexpr constexpr_demo.cpp)

add_executable(types_normalised types_normalised.cpp)

add_executable(decltype decltype.cpp)

add_executable(variable_template variable_template.cpp)

add_executable(rangefor range_for.cpp)

add_executable(rangeformap range_for_map.cpp)