add_executable(nullptr nullptr_demo.cpp)

add_executable(constexpr constexpr_demo.cpp)

add_executable(types_normalised types_normalised.cpp)

add_executable(decltype decltype.cpp)

add_executable(variable_template variable_template.cpp)

add_executable(rangefor range_for.cpp)

add_executable(rangeformap range_for_map.cpp)

add_executable(initializateur_list initializateur_list.cpp)

add_executable(suffixes_litteraux suffixes_litteraux.cpp)

add_executable(suffixes_litteraux_conversion suffixes_litteraux_conversion.cpp)

add_executable(sizeof_member sizeof_member.cpp)

add_executable(structured_bindings structured_bindings.cpp)