add_executable(unique_ptr unique_ptr.cpp)

add_executable(move_unique_ptr move_unique_ptr.cpp)

add_executable(shared_ptr shared_ptr.cpp)

add_executable(shared_ptr_cycle shared_ptr_cycle.cpp)

add_executable(weak_ptr weak_ptr.cpp)

add_executable(custom_deleter custom_deleter.cpp)

add_executable(shared_ptr_frow_raw shared_ptr_frow_raw.cpp)
