add_executable(mixins mixins.cpp)

add_executable(template_specialisation template_specialisation.cpp)

add_executable(template_heritance_specialisation template_heritance_specialisation.cpp)

add_executable(template_containment template_containment.cpp)

add_executable(sfinae sfinae.cpp)

add_executable(types_is_integral types_is_integral.cpp)

add_executable(types_custom types_custom.cpp)

add_executable(conditional conditional.cpp)

add_executable(ifconstexpr ifconstexpr.cpp)

add_executable(concepts concepts.cpp)

add_executable(concepts_requires concepts_requires.cpp)

add_executable(crtp crtp.cpp)