add_executable(mixins mixins.cpp)

add_executable(template_specialisation template_specialisation.cpp)

add_executable(template_heritance_specialisation template_heritance_specialisation.cpp)

add_executable(template_containment template_containment.cpp)

add_executable(sfinae sfinae.cpp)

add_executable(types_is_integral types_is_integral.cpp)

add_executable(types_custom types_custom.cpp)

add_executable(conditional conditional.cpp)

add_executable(ifconstexpr ifconstexpr.cpp)

add_executable(concepts concepts.cpp)

add_executable(concepts_and_requires concepts_and_requires.cpp)

add_executable(requires requires.cpp)

add_executable(crtp crtp.cpp)

add_executable(extended_friends extended_friends.cpp)

add_executable(variadic_template variadic_template.cpp)

add_executable(pattern_matching pattern_matching.cpp)

add_executable(concepts_variant_visit concepts_variant_visit.cpp)