add_executable(thread_demo thread_demo.cpp)

add_executable(jthread_join jthread_join.cpp)

add_executable(jthread_token jthread_token.cpp)

add_executable(call_once call_once.cpp)

add_executable(call_once_singleton call_once_singleton.cpp)

add_executable(sleep_until sleep_until.cpp)

add_executable(yield yield.cpp)

add_executable(launch launch.cpp)

add_executable(deferred deferred.cpp)

add_executable(promise promise.cpp)