add_executable(1_constexpr 1_constexpr.cpp)

add_executable(2_auto 2_auto.cpp)

add_executable(3_decltype 3_decltype.cpp)

add_executable(4_map_decomposition 4_map_decomposition.cpp)

add_executable(5_constructor_default 5_constructor_default.cpp)

add_executable(6_threeway 6_threeway.cpp)

add_executable(7_if_constexpr 7_if_constexpr.cpp)